# worker-consulta-cnpj

./: .env-example  Dockerfile  README.md  pyproject.toml
datas/models/_assets/: 1685934717
datas/models/_memory/: yolov6n.onnx.RA_kwDOG2LmxM4EKduc
static/: screenshot-test-purposes.html
worker_consulta_cnpj/: captcha.py  worker.py
worker_consulta_cnpj/adapters/: postgres.py  smtp.py
worker_consulta_cnpj/apps/: hcaptcha.py  parser.py  repositories.py  scraper.py
