[tool.poetry]
name = "worker-consulta-cnpj"
version = "0.1.0"
description = ""
authors = ["Lucas <lucassrod@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
structlog = "^23.1.0"
playwright = "^1.34.0"
lxml = "^4.9.2"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
ipdb = "^0.13.13"
pytest = "^7.3.1"
pytest-runner = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
worker = "worker_consulta_cnpj.worker"